--- a/index.html
+++ b/index.html
@@ -5,8 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rx</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    欢迎访问rrrxxx0510的网站！
+    <div class="header">
+        <div class="header-title">
+            <img src="img/p1.png" alt="">
+            <p>企業情報</p>
+            <p>おしらせ</p>
+            <p>キムラヤのパン</p>
+            <p>直営店舗の商品一覧</p>
+            <p>直営店舗リスト</p>
+            <p>メディア情報</p>
+            <p>オンラインショップ</p>
+            <p>お問い合わせ</p>
+        </div>
+        <div class="header-main">
+            <div class="header-left">
+                <p>企業情報</p>
+                <p>おしらせ</p>
+                <p>キムラヤのパン</p>
+                <p>直営店舗の商品一覧</p>
+                <p>直営店舗リスト</p>
+                <p>メディア情報</p>
+                <p>オンラインショップ</p>
+                <p>お問い合わせ</p>
+                <img src="img/p2.png" alt="">
+                <img src="img/p3.png" alt="">
+                <img src="img/p4.png" alt="">
+            </div>
+            <div class="header-right">
+                <img src="img/mv_01.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="mid-box">
+        <span class="mid-box-title">お知らせ</span>
+        <span class="mid-box-time">2023.04.28</span>
+        <span class="mid-box-event">５月催事出店のお知らせ</span>
+        <span>---</span>
+    </div>
+    <div class="main">
+        <div class="main-element">
+                <div class="element-list">
+                    <div class="row">
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_1.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_2.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_3.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_4.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_5.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                        <div class="list">
+                            <a href="">
+                                <img src="img/p_6.jpeg" alt="" height="146" width="378">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+
 </body>
 </html>
